--- a/dashboard.html
+++ b/dashboard.html
@@ -40,8 +40,8 @@
                 <div class="flex-between" style="align-items: flex-start;">
                     <div class="flex-center" style="gap: 1.5rem;">
                         <!-- Hex Avatar -->
-                        <div
-                            style="width: 80px; height: 80px; background: #111; clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%); display: flex; align-items: center; justify-content: center; font-size: 2rem; border: 1px solid var(--gold-primary); box-shadow: 0 0 15px var(--gold-glow);">
+                        <div class="hex-avatar-responsive"
+                            style="background: #111; clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%); display: flex; align-items: center; justify-content: center; font-size: 2rem; border: 1px solid var(--gold-primary); box-shadow: 0 0 15px var(--gold-glow);">
                             👤
                         </div>
                         <div>
@@ -53,7 +53,7 @@
                             </div>
                         </div>
                     </div>
-                    <div style="text-align: right;">
+                    <div class="text-responsive">
                         <div
                             style="font-size: 0.8rem; color: var(--text-secondary); text-transform: uppercase; letter-spacing: 1px;">
                             Global Rank</div>
