--- a/leaderboard.html
+++ b/leaderboard.html
@@ -515,9 +515,9 @@
     <div class="player-info">
         <div class="player-name">
             ${u.username}
-            <span class="badge-pill ${tierClass}" style="display: inline-flex; align-items: center; gap: 4px;">
-                <img src="assets/tiers/${tier.toLowerCase()}.png" class="tier-icon-sm" style="width: 20px; height: 20px;">
-                ${tier}
+            <span class="badge-pill ${tierClass}" style="display: inline-flex; align-items: center; gap: 8px; padding: 4px 8px;">
+                <img src="assets/tiers/${tier.toLowerCase()}.png" class="tier-icon-sm" style="width: 50px; height: 50px; filter: drop-shadow(0 0 5px rgba(0,0,0,0.5));">
+                <span style="font-size: 1.1em;">${tier}</span>
             </span>
         </div>
         <div class="player-detail">
